k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: health-nginx-ingress
  namespace: otus-homework
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    - host: arch.homework
      http:
        paths:
          - path: /(.*)
            pathType: Prefix
            backend:
              service:
                name: health-srv
                port:
                  number: 8000 
          - path: /otusapp/andrew/(.*)
            pathType: Prefix
            backend:
              service:
                name: health-srv
                port:
                  number: 8000
